force-app/main/default/objects/Additional_Support_Activity__c/Additional_Support_Activity__c.object-meta.xml
<CustomObject>
    <description>Additional Support Activities</description>
    <label>Additional Support Activity</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Additional Support Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Support Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>