force-app/main/default/objects/Additional_Support_Activity__c/fields/GL__c.field-meta.xml
<CustomField>
    <fullName>GL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL</label>
    <length>12</length>
    <type>Text</type>
</CustomField>