force-app/main/default/objects/Additional_Support_Activity__c/fields/Parent_Community_Investment__c.field-meta.xml
<CustomField>
    <fullName>Parent_Community_Investment__c</fullName>
    <label>Parent Community Investment</label>
    <referenceTo>Community_Giving__c</referenceTo>
    <relationshipLabel>Additional Support Activities</relationshipLabel>
    <relationshipName>Additional_Support_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>